apps/base/logging-elasticsearch/deploy/elasticsearch/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/component: elasticsearch
      app.kubernetes.io/instance: k8s-logs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
        app.kubernetes.io/component: elasticsearch
        app.kubernetes.io/instance: k8s-logs
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # opensearch
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: elasticsearch
        image: "registry.lan/opensearch:2.6.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9300
          name: transport
        - containerPort: 9200
          name: web
        - containerPort: 9600
          name: metrics
        securityContext:
          #readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
            #add:
            #  - SYS_CHROOT
        readinessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 60
          periodSeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: 750m
            memory: 1Gi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: elasticsearch-data
          mountPath: /usr/share/opensearch/data
        - name: elasticsearch-config
          mountPath: /usr/share/opensearch/config/opensearch.yml
          subPath: opensearch.yml
        - name: elasticsearch-security
          mountPath: /usr/share/opensearch/plugins/opensearch-security/securityconfig
        - name: certs-volume
          mountPath: /usr/share/opensearch/config/certs
        - name: cluster-ca-volume
          mountPath: /usr/share/opensearch/plugins/opensearch-security/cluster/ca.crt
          subPath: ca.crt
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-data
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
      - name: elasticsearch-security
        secret:
          secretName: elasticsearch-security
      - name: certs-volume
        secret:
          secretName: elasticsearch-certs
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
